# oid4-vci-vp-integration-tests

./: .gitignore  Jenkinsfile  Makefile  README.md  environment.py  requirements.txt  setup.cfg
.github/workflows/: eclipse-dash.yml  sbom.yml  test.yml
bootstrap/: README.md  docker-compose.yml
bootstrap/scripts/vault/: init-keys.sh
bootstrap/shared/: client_id.env
features/: credentials.feature  didcomm.feature
src/eu/xfsc/bdd/ocm_w/: utils.py
src/eu/xfsc/bdd/ocm_w/components/: __init__.py  component.py  context.py  credential_retrieval.py  didcomm.py  dummyissuer.py  presentation.py  signer.py  some_component.py  status_list.py  storage.py  wellknown.py
steps/: didcomm.py  issuing.py  presentation.py  some_steps.py
tests/: test_some_component.py
